UPdate release note for this version and added forgot password

--- a/server/.env
+++ b/server/.env
@@ -5,3 +5,14 @@ DB_USER=root
 DB_PASSWORD=Password
 DB_NAME=kapiree_login
 JWT_SECRET=supersecretjwtkey
+
+# Nodemailer Email Configuration
+EMAIL_HOST=smtp.ethereal.email
+EMAIL_PORT=587
+EMAIL_SECURE=false # Use 'true' for 465, 'false' for 587
+EMAIL_USER=user@example.com # Replace with your email
+EMAIL_PASS=password # Replace with your email password
+EMAIL_FROM="Kapiree Support <support@kapiree.com>"
+
+# Client Base URL for password reset links
+CLIENT_BASE_URL=http://localhost:8081 # Updated to match the current client development port
